Style: fix sticky year headers z-index

--- a/site/_includes/styles/components/_archive-list.scss
+++ b/site/_includes/styles/components/_archive-list.scss
@@ -29,6 +29,7 @@
       position: sticky;
       top: 0;
       padding-top: 0.5em;
+      z-index: 1;
    }
 
    .year-title {
